--- a/Módulo3/fundo006.html
+++ b/Módulo3/fundo006.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url(img/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -29,6 +29,9 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>    
     </main>
 </body>
 </html>
