shorthand no background

--- a/Módulo3/fundo006.html
+++ b/Módulo3/fundo006.html
@@ -8,16 +8,25 @@
     <style>
         body {
             height: 100vh;
+            /*
             background-color: black;
             background-image: url(img/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+            
+            
+            /* Shorthand Background
+                color > image > position > repeat > [size] > attachment
+            */
+            background: black url(img/wallpaper002.jpg) center center no-repeat  fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 2px solid darkblue;
@@ -32,6 +41,12 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>    
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p> 
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere eveniet voluptatibus possimus nihil vero reiciendis tempora nemo doloribus doloremque, quo saepe veritatis, ex sint esse est vitae error consectetur ad?Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut alias illo dolore tempore, praesentium suscipit omnis nam voluptas excepturi commodi. Molestiae doloremque pariatur neque officiis nam exercitationem odio aperiam!Lorem</p> 
     </main>
 </body>
 </html>
