--- a/Módulo3/CordelModerno.html
+++ b/Módulo3/CordelModerno.html
@@ -29,7 +29,7 @@
             </P>
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="img01">
             <P>
                 Não é mais como era antes <br>
                 É tudo abreviado <br>
@@ -51,7 +51,7 @@
                 Se o saite é muito bom <br>
                 Ele vale um alto preço.
             </p>
-            <br><br>
+
             <p>
                 Pra piorar a linguagem <br>
                 O emoticom é um risco <br>
@@ -63,7 +63,7 @@
             </p>
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="img02">
             <p>
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
@@ -87,7 +87,6 @@
                 Da tecnologia do agora.
             </p>
        
-            <br>
             <p>
                 Felizmente, pra orar <br>
                 Não precisa de internet <br>
