Personalizando a cor da tabela

--- a/Módulo3/tabela004.html
+++ b/Módulo3/tabela004.html
@@ -20,7 +20,7 @@
             font-size: 1.3em;
         }
         thead > tr > th {
-            background-color: gray;
+            background-color: rgb(247, 43, 70);
             padding: 10px;
             font-weight: bold;
             border: 1px solid black;
@@ -29,6 +29,14 @@
         td {
             border: 1px solid black;
             padding: 10px;
+        }
+
+        .mulheres {
+            background-color: rgb(243, 148, 204);
+        }
+
+        .homens {
+            background-color: rgb(152, 243, 247);
         }
 
        
@@ -48,42 +56,42 @@
         </thead>
         <tbody>
             <tr>
-                <td rowspan="3">Mulheres</td>
-                <td>Ana Maria Santos</td>
-                <td>Alien</td>
-                <td>Rambo</td>
-                <td>Vingadores</td>
+                <td rowspan="3" class="mulheres">Mulheres</td>
+                <td class="mulheres">Ana Maria Santos</td>
+                <td class="mulheres">Alien</td>
+                <td class="mulheres">Rambo</td>
+                <td class="mulheres">Vingadores</td>
             </tr>
             <tr>
-                <td>Beatriz Souza</td>
-                <td>Hulk</td>
-                <td>Inception</td>
-                <td>Batman</td>
+                <td class="mulheres">Beatriz Souza</td>
+                <td class="mulheres">Hulk</td>
+                <td class="mulheres">Inception</td>
+                <td class="mulheres">Batman</td>
             </tr>
             <tr>
-                <td>Cláudia Melo</td>
-                <td>Oblivion</td>
-                <td>Matrix</td>
-                <td>Big Hero</td>
+                <td class="mulheres">Cláudia Melo</td>
+                <td class="mulheres">Oblivion</td>
+                <td class="mulheres">Matrix</td>
+                <td class="mulheres">Big Hero</td>
             </tr>
             <tr>
-                <td rowspan="3">Homens</td>
-                <td>Bruno Medonça</td>
-                <td>Intocáveis</td>
-                <td>Amnésia</td>
-                <td>Gladiador</td>
+                <td rowspan="3" class="homens">Homens</td>
+                <td class="homens">Bruno Medonça</td>
+                <td class="homens">Intocáveis</td>
+                <td class="homens">Amnésia</td>
+                <td class="homens">Gladiador</td>
             </tr>
             <tr>
-                <td>Daniel Lourenço</td>
-                <td>Wall-E</td>
-                <td>Oldboy</td>
-                <td>Dangal</td>
+                <td class="homens">Daniel Lourenço</td>
+                <td class="homens">Wall-E</td>
+                <td class="homens">Oldboy</td>
+                <td class="homens">Dangal</td>
             </tr>
             <tr>
-                <td>Fabiano Mota</td>
-                <td>Star Wars 5</td>
-                <td>Taxi Driver</td>
-                <td>Toy Story</td>
+                <td class="homens">Fabiano Mota</td>
+                <td class="homens">Star Wars 5</td>
+                <td class="homens">Taxi Driver</td>
+                <td class="homens">Toy Story</td>
             </tr>
         </tbody>
     </table> 
