--- a/Módulo3/tabela004.html
+++ b/Módulo3/tabela004.html
@@ -26,7 +26,7 @@
             border: 1px solid black;
         }
 
-        td {
+        td, th {
             border: 1px solid black;
             padding: 10px;
         }
@@ -49,14 +49,14 @@
         </caption>
         <thead>
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td rowspan="3" class="mulheres">Mulheres</td>
+                <td rowspan="3"  scope="rowgroup" class="mulheres" >Mulheres</td>
                 <td class="mulheres">Ana Maria Santos</td>
                 <td class="mulheres">Alien</td>
                 <td class="mulheres">Rambo</td>
@@ -75,7 +75,7 @@
                 <td class="mulheres">Big Hero</td>
             </tr>
             <tr>
-                <td rowspan="3" class="homens">Homens</td>
+                <td rowspan="3" scope="rowgroup " class="homens">Homens</td>
                 <td class="homens">Bruno Medonça</td>
                 <td class="homens">Intocáveis</td>
                 <td class="homens">Amnésia</td>
@@ -94,6 +94,12 @@
                 <td class="homens">Toy Story</td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="row">Total</th>
+                <td>1000</td>
+            </tr>
+        </tfoot>
     </table> 
 </body>
 </html>
