--- a/Módulo4/form007.html
+++ b/Módulo4/form007.html
@@ -35,7 +35,7 @@
 
         <p>
             <label for="imsg">Mensagem</label><br>
-            <textarea name="msg" id="imsg" cols="30" rows="10"></textarea>
+            <textarea name="msg" id="imsg" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
         </p>
 
         <p>
